tests/baselines/reference/objectLitArrayDeclNoNew.errors.txt
objectLitArrayDeclNoNew.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
objectLitArrayDeclNoNew.ts(22,20): error TS1011: An element access expression should take an argument.
objectLitArrayDeclNoNew.ts(27,1): error TS1128: Declaration or statement expected.


==== objectLitArrayDeclNoNew.ts (3 errors) ====
    declare var console;
    "use strict";
    module Test {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface IState {
        }
    
        export interface IToken {
        }
    
        export interface ILineTokens {
            tokens: IToken[];
            endState: IState;
        }
    
        export class Gar {
            public moo: number = 0;
        }
    
        export function bug(): ILineTokens {
          var state:IState= null;
          return {
           tokens: Gar[],//IToken[],  // Missing new. Correct syntax is: tokens: new IToken[]
                       
!!! error TS1011: An element access expression should take an argument.
           endState: state
          };
         }
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.